# DeltaHack12

./: App.jsx  agent.py  index.html  index.js  pyproject.toml  speech.py  speech2.py
components/: AnalyzeView.jsx  BrowseView.jsx  CategoryTabs.jsx  ExerciseCard.jsx  ExerciseGrid.jsx  ExercisePreview.jsx  FeedbackPanel.jsx  Header.jsx  InstructionsPanel.jsx  Loading.jsx  VideoOverlay.jsx  VoiceAgent.jsx  VoiceBanner.jsx  VoiceCoach.jsx  VoiceSettings.jsx  index.js
data/: exercises.js
hooks/: useLiveKit.js  usePoseDetection.js
style/: main.css  voice-agent.css
utils/: VoiceCoach.js  poseUtils.js
